apps/media/bazarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress
  labels:
    revision: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.samsonnguyen.ca`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
          namespace: media
      middlewares:
        - name: traefik-sso@kubernetescrd
        - name: traefik-redirect-scheme@kubernetescrd
  tls:
    secretName: default-samsonnguyen-ca
    domains:
      - main: samsonnguyen.ca
